Add response for Organisation PUT

--- a/api-reference-8-sept.yaml
+++ b/api-reference-8-sept.yaml
@@ -4665,7 +4665,13 @@ paths:
                   example: ''
       responses:
         '200':
-          description: ''
+          description: 'An organisation object (in an array)'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Organisation'
   /organisation/{orgId}/children:
     get:
       tags:
